[package]
name = "swords"
version = "1.0.0"
edition = "2021"
author = "Raden Rifqi Rahman"
description = "A simple, extensible, and portable password manager file format."
repository = "https://github.com/Radenz/swords"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
aes-gcm = "0.10.1"
arboard = "3.2.0"
clap = { version = "4.3.0", features = ["derive"] }
crossterm = "0.26.1"
inquire = "0.6.2"
rand = "0.8.5"
sha3 = "0.10.8"
